Monte Carlo and Boruta fs done, VIF removeal TODO

--- a/Project2/Python_scripts/classifiers_out_of_the_box.ipynb
+++ b/Project2/Python_scripts/classifiers_out_of_the_box.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "a8409e7d",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,13 @@
     "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "import xgboost\n",
-    "import lightgbm"
+    "import lightgbm\n",
+    "from sklearn.metrics import balanced_accuracy_score as b_a_c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "031d5fcf",
    "metadata": {},
    "outputs": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "51a7cc6e",
    "metadata": {
     "scrolled": true
@@ -81,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "9fbc3e10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.966"
+       "0.9706666666666667"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,22 +100,22 @@
    "source": [
     "logistic_model=LogisticRegression(penalty=\"l2\",tol=1e-5,max_iter=10000)\n",
     "logistic_model.fit(X_digits_train,y_digits_train)\n",
-    "(logistic_model.predict(X_digits_test)==y_digits_test).mean()"
+    "b_a_c(y_digits_test,logistic_model.predict(X_digits_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "b92bd99e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.962"
+       "0.974"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,12 +123,12 @@
    "source": [
     "random_forest_model=RandomForestClassifier(n_jobs=-1) #do sprawdzenia parametry\n",
     "random_forest_model.fit(X_digits_train,y_digits_train)\n",
-    "(random_forest_model.predict(X_digits_test)==y_digits_test).mean()"
+    "b_a_c(y_digits_test,random_forest_model.predict(X_digits_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "09f8fb61",
    "metadata": {
     "scrolled": true
@@ -136,10 +137,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9773333333333334"
+       "(0.9793333333333334, 698)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,22 +148,22 @@
    "source": [
     "xgb_model = xgboost.XGBClassifier() #do sprawdzenia parametry\n",
     "xgb_model.fit(X_digits_train,(y_digits_train+1)/2)\n",
-    "(xgb_model.predict(X_digits_test)==(y_digits_test+1)/2).mean()"
+    "b_a_c((y_digits_test+1)/2,xgb_model.predict(X_digits_test)),sum(xgb_model.feature_importances_>0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "7e3f6f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9673333333333334, 95)"
+       "(0.964, 93)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,22 +171,22 @@
    "source": [
     "adaboost_model=AdaBoostClassifier(n_estimators=100)\n",
     "adaboost_model.fit(X_digits_train,y_digits_train)\n",
-    "(adaboost_model.predict(X_digits_test)==y_digits_test).mean(),sum(adaboost_model.feature_importances_>0)"
+    "b_a_c(y_digits_test,adaboost_model.predict(X_digits_test)),sum(adaboost_model.feature_importances_>0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "bd74f69f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9753333333333334, 971)"
+       "(0.9793333333333334, 993)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +194,7 @@
    "source": [
     "lgm_model=lightgbm.LGBMClassifier()\n",
     "lgm_model.fit(X_digits_train,y_digits_train)\n",
-    "(lgm_model.predict(X_digits_test)==y_digits_test).mean(),sum(lgm_model.feature_importances_>0)"
+    "b_a_c(y_digits_test,lgm_model.predict(X_digits_test)),sum(lgm_model.feature_importances_>0)"
    ]
   },
   {
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "63b208d4",
    "metadata": {},
    "outputs": [],
@@ -219,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "98c06a0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9713333333333334"
+       "0.9753333333333334"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,22 +238,22 @@
    "source": [
     "logistic_model=LogisticRegression(penalty=\"l2\",tol=1e-5,max_iter=1000)\n",
     "logistic_model.fit(X_digits_train_sc,y_digits_train)\n",
-    "(logistic_model.predict(X_digits_test_sc)==y_digits_test).mean()"
+    "b_a_c(y_digits_test,logistic_model.predict(X_digits_test_sc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "53fd0b73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.976, 263)"
+       "(0.9766666666666667, 285)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,12 +261,12 @@
    "source": [
     "logistic_model=LogisticRegression(penalty=\"l1\",tol=1e-5,max_iter=1000,solver='liblinear')\n",
     "logistic_model.fit(X_digits_train_sc,y_digits_train)\n",
-    "(logistic_model.predict(X_digits_test_sc)==y_digits_test).mean(),(logistic_model.coef_>0).sum()"
+    "b_a_c(y_digits_test,logistic_model.predict(X_digits_test_sc)),(logistic_model.coef_>0).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "ccb9792e",
    "metadata": {
     "scrolled": false
@@ -274,10 +275,10 @@
     {
      "data": {
       "text/plain": [
-       "0.964"
+       "0.9726666666666666"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,22 +286,22 @@
    "source": [
     "random_forest_model=RandomForestClassifier(n_jobs=-1) #do sprawdzenia parametry\n",
     "random_forest_model.fit(X_digits_train_sc,y_digits_train)\n",
-    "(random_forest_model.predict(X_digits_test_sc)==y_digits_test).mean()"
+    "b_a_c(y_digits_test,random_forest_model.predict(X_digits_test_sc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "900bc6db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9773333333333334, 680)"
+       "(0.9793333333333334, 698)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,22 +309,22 @@
    "source": [
     "xgb_model = xgboost.XGBClassifier() #do sprawdzenia parametry\n",
     "xgb_model.fit(X_digits_train_sc,(y_digits_train+1)/2)\n",
-    "(xgb_model.predict(X_digits_test_sc)==(y_digits_test+1)/2).mean(),sum(xgb_model.feature_importances_>0)"
+    "b_a_c((y_digits_test+1)/2,xgb_model.predict(X_digits_test_sc)),sum(xgb_model.feature_importances_>0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "6b99b043",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9673333333333334, 95)"
+       "(0.964, 93)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,22 +332,22 @@
    "source": [
     "adaboost_model=AdaBoostClassifier(n_estimators=100)\n",
     "adaboost_model.fit(X_digits_train_sc,y_digits_train)\n",
-    "(adaboost_model.predict(X_digits_test_sc)==y_digits_test).mean(),sum(adaboost_model.feature_importances_>0)"
+    "b_a_c(y_digits_test,adaboost_model.predict(X_digits_test_sc)),sum(adaboost_model.feature_importances_>0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "56ca78c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9746666666666667, 974)"
+       "(0.98, 982)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,28 +355,7 @@
    "source": [
     "lgm_model=lightgbm.LGBMClassifier()\n",
     "lgm_model.fit(X_digits_train_sc,y_digits_train)\n",
-    "(lgm_model.predict(X_digits_test_sc)==y_digits_test).mean(),sum(lgm_model.feature_importances_>0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "54aad938",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from eval_models import eval_models"
+    "b_a_c(y_digits_test,lgm_model.predict(X_digits_test_sc)),sum(lgm_model.feature_importances_>0)"
    ]
   }
  ],
