--- a/Project2/Python_scripts/Boruta-digits.ipynb
+++ b/Project2/Python_scripts/Boruta-digits.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "948f417c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,15 +22,16 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from boruta import BorutaPy\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, KFold\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "5dc8e36a",
    "metadata": {},
    "outputs": [],
@@ -75,10 +85,8 @@
     "noscaling_res=eval_models.get_models_ba(X_dig_train_boruta,\n",
     "                              X_dig_test_boruta,\n",
     "                              y_dig_train,\n",
-    "                              y_dig_test,\n",
-    "                              logistic_args={\"max_iter\":1000}\n",
-    "                             )\n",
-    "print(\"no of features:\",len(X_dig_train_boruta.columns))"
+    "                              y_dig_test\n",
+    "                             )"
    ]
   },
   {
@@ -127,10 +135,8 @@
     "noscaling_res_cor=eval_models.get_models_ba(X_train_no_corr,\n",
     "                              X_dig_test_boruta,\n",
     "                              y_dig_train,\n",
-    "                              y_dig_test,\n",
-    "                              logistic_args={\"max_iter\":1000}\n",
-    "                             )\n",
-    "print(\"no of features:\",len(X_train_no_corr.columns))"
+    "                              y_dig_test\n",
+    "                             )"
    ]
   },
   {
@@ -184,10 +190,8 @@
     "noscaling_res_cor=eval_models.get_models_ba(X_train_no_corr2,\n",
     "                              X_dig_test_boruta_sc,\n",
     "                              y_dig_train,\n",
-    "                              y_dig_test,\n",
-    "                              logistic_args={\"max_iter\":1000}\n",
-    "                             )\n",
-    "print(\"no of features:\",len(X_train_no_corr2.columns))"
+    "                              y_dig_test\n",
+    "                             )"
    ]
   },
   {
@@ -248,10 +252,8 @@
     "scaled_res=eval_models.get_models_ba(X_dig_train_sc_boruta,\n",
     "                              X_dig_test_sc_boruta,\n",
     "                              y_dig_train,\n",
-    "                              y_dig_test,\n",
-    "                              logistic_args={\"max_iter\":1000}\n",
-    "                             )\n",
-    "print(\"no of features:\",len(X_dig_train_sc_boruta.columns))"
+    "                              y_dig_test\n",
+    "                             )"
    ]
   },
   {
@@ -302,10 +304,175 @@
     "scaled_res_cor=eval_models.get_models_ba(X_dig_train_sc_no_corr,\n",
     "                              X_dig_test_sc_boruta,\n",
     "                              y_dig_train,\n",
-    "                              y_dig_test,\n",
-    "                              logistic_args={\"max_iter\":1000}\n",
-    "                             )\n",
-    "print(\"no of features:\",len(X_dig_train_sc_no_corr.columns))"
+    "                              y_dig_test\n",
+    "                             )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "833c903e",
+   "metadata": {},
+   "source": [
+    "## Cross validation (with standarization before Boruta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cf438e04",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression 0.9766\n",
+      "RandomForestClassifier 0.981\n",
+      "AdaBoostClassifier 0.9645\n",
+      "LGBMClassifier 0.9833\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "1it [19:33, 1173.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9833\n",
+      "1029  features in the dataset\n",
+      "LogisticRegression 0.9789\n",
+      "RandomForestClassifier 0.9701\n",
+      "AdaBoostClassifier 0.9689\n",
+      "LGBMClassifier 0.9689\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "2it [38:04, 1136.48s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9778\n",
+      "1013  features in the dataset\n",
+      "LogisticRegression 0.9789\n",
+      "RandomForestClassifier 0.9844\n",
+      "AdaBoostClassifier 0.9734\n",
+      "LGBMClassifier 0.9823\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "3it [55:05, 1084.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9811\n",
+      "1010  features in the dataset\n",
+      "LogisticRegression 0.9745\n",
+      "RandomForestClassifier 0.9736\n",
+      "AdaBoostClassifier 0.9621\n",
+      "LGBMClassifier 0.9778\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "4it [1:13:02, 1081.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9777\n",
+      "1008  features in the dataset\n",
+      "LogisticRegression 0.98\n",
+      "RandomForestClassifier 0.9722\n",
+      "AdaBoostClassifier 0.97\n",
+      "LGBMClassifier 0.9778\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "5it [1:29:34, 1074.94s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9756\n",
+      "1017  features in the dataset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "kf = KFold(n_splits=5,shuffle=True)\n",
+    "models_res=[]\n",
+    "for train_idx, val_idx in tqdm(kf.split(X_dig_train)):\n",
+    "    X_train=X_dig_train.iloc[train_idx,:]\n",
+    "    X_val=X_dig_train.iloc[val_idx,:]\n",
+    "    y_train=y_dig_train[train_idx]\n",
+    "    y_val=y_dig_train[val_idx]\n",
+    "    \n",
+    "    X_train_sc,X_val_sc=eval_models.standarize(X_train,X_val)\n",
+    "    \n",
+    "    RF = RandomForestClassifier(n_jobs=-1, max_depth=6)\n",
+    "    feat_select = BorutaPy(RF, n_estimators='auto', verbose=0)\n",
+    "    feat_select.fit(X_train.values,y_train)\n",
+    "    #zapisywać np do pliku jakie feature wybrane i zostawić tylko te najczęściej wybierane, na ten moment 3/5 zobaczmy\n",
+    "    \n",
+    "    X_train_sc_boruta=X_train_sc.iloc[:,feat_select.support_]\n",
+    "    X_val_sc_boruta=X_val_sc.iloc[:,feat_select.support_]\n",
+    "    \n",
+    "    with open('../data/boruta/digits-features.csv', 'a') as f:\n",
+    "        np.savetxt(f, np.where(feat_select.support_), delimiter=\",\", fmt='%i')\n",
+    "    f.close()\n",
+    "    \n",
+    "    X_train_sc_boruta_no_corr=eval_models.delete_corr(X_train_sc_boruta)\n",
+    "\n",
+    "    no_of_features=X_train_sc_boruta_no_corr.shape[1]\n",
+    "    tmp=eval_models.get_models_ba(X_train_sc_boruta_no_corr,X_val_sc_boruta,y_train,y_val)\n",
+    "    models_res.append((tmp,no_of_features))"
    ]
   }
  ],
