Boruta for digits, mcfs tested on artificial

--- a/Project2/Python_scripts/Boruta-digits.ipynb
+++ b/Project2/Python_scripts/Boruta-digits.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "cf438e04",
    "metadata": {
     "scrolled": false
@@ -319,7 +319,93 @@
      "output_type": "stream",
      "text": [
       "XGBClassifier 0.978\n",
-      "1040  features in the dataset\n"
+      "1040  features in the dataset\n",
+      "LogisticRegression 0.9767\n",
+      "RandomForestClassifier 0.9657\n",
+      "AdaBoostClassifier 0.9722\n",
+      "LGBMClassifier 0.9744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "2it [36:42, 1089.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9789\n",
+      "1019  features in the dataset\n",
+      "LogisticRegression 0.9721\n",
+      "RandomForestClassifier 0.978\n",
+      "AdaBoostClassifier 0.971\n",
+      "LGBMClassifier 0.981\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "3it [56:01, 1120.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9833\n",
+      "1034  features in the dataset\n",
+      "LogisticRegression 0.9814\n",
+      "RandomForestClassifier 0.9775\n",
+      "AdaBoostClassifier 0.9741\n",
+      "LGBMClassifier 0.9814\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "4it [1:16:09, 1155.48s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9772\n",
+      "1056  features in the dataset\n",
+      "LogisticRegression 0.9786\n",
+      "RandomForestClassifier 0.9714\n",
+      "AdaBoostClassifier 0.972\n",
+      "LGBMClassifier 0.9752\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "5it [1:34:29, 1133.81s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier 0.9775\n",
+      "1042  features in the dataset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -364,10 +450,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d54d34b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2</th>\n",
+       "      <th>12</th>\n",
+       "      <th>14</th>\n",
+       "      <th>16</th>\n",
+       "      <th>25</th>\n",
+       "      <th>34</th>\n",
+       "      <th>38</th>\n",
+       "      <th>48</th>\n",
+       "      <th>53</th>\n",
+       "      <th>66</th>\n",
+       "      <th>...</th>\n",
+       "      <th>4963</th>\n",
+       "      <th>4966</th>\n",
+       "      <th>4967</th>\n",
+       "      <th>4970</th>\n",
+       "      <th>4976</th>\n",
+       "      <th>4977</th>\n",
+       "      <th>4979</th>\n",
+       "      <th>4980</th>\n",
+       "      <th>4981</th>\n",
+       "      <th>4991</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2868</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>987</td>\n",
+       "      <td>0</td>\n",
+       "      <td>332</td>\n",
+       "      <td>980</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>972</td>\n",
+       "      <td>987</td>\n",
+       "      <td>0</td>\n",
+       "      <td>770</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4630</th>\n",
+       "      <td>0</td>\n",
+       "      <td>645</td>\n",
+       "      <td>991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>983</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>983</td>\n",
+       "      <td>...</td>\n",
+       "      <td>991</td>\n",
+       "      <td>991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>662</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1870</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>987</td>\n",
+       "      <td>0</td>\n",
+       "      <td>983</td>\n",
+       "      <td>801</td>\n",
+       "      <td>987</td>\n",
+       "      <td>976</td>\n",
+       "      <td>976</td>\n",
+       "      <td>980</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>980</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>0</td>\n",
+       "      <td>877</td>\n",
+       "      <td>991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>529</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>987</td>\n",
+       "      <td>...</td>\n",
+       "      <td>991</td>\n",
+       "      <td>968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>937</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3582</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>831</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>570</td>\n",
+       "      <td>...</td>\n",
+       "      <td>991</td>\n",
+       "      <td>991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>874</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 954 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      2     12    14    16    25    34    38    48    53    66    ...  4963  \\\n",
+       "2868     0     0   991     0     0     0   987     0   332   980  ...     0   \n",
+       "4630     0   645   991     0   983     0     0     0     0   983  ...   991   \n",
+       "1870     0     0   987     0   983   801   987   976   976   980  ...     0   \n",
+       "353      0   877   991     0     0     0   529     0     0   987  ...   991   \n",
+       "3582     0     0     0     0   831     0     0     0     0   570  ...   991   \n",
+       "\n",
+       "      4966  4967  4970  4976  4977  4979  4980  4981  4991  \n",
+       "2868     0     0     0     0   972   987     0   770     0  \n",
+       "4630   991     0     0     0     0   662     0     0     0  \n",
+       "1870     0     0     0   980     0     0     0     0     0  \n",
+       "353    968     0     0     0   991     0     0   937     0  \n",
+       "3582   991     0     0     0   874     0     0     0     0  \n",
+       "\n",
+       "[5 rows x 954 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_times=5\n",
     "boruta_all_results=pd.read_csv('../data/boruta/digits-features.csv',header=None,sep=\"\\n\")\n",
@@ -381,10 +660,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d962bd05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression 0.972\n",
+      "RandomForestClassifier 0.972\n",
+      "AdaBoostClassifier 0.9747\n",
+      "LGBMClassifier 0.9813\n",
+      "XGBClassifier 0.9807\n",
+      "954  features in the dataset\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Classifier</th>\n",
+       "      <th>BA score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.972000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForestClassifier</td>\n",
+       "      <td>0.972000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AdaBoostClassifier</td>\n",
+       "      <td>0.974667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LGBMClassifier</td>\n",
+       "      <td>0.981333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>XGBClassifier</td>\n",
+       "      <td>0.980667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Classifier  BA score\n",
+       "0      LogisticRegression  0.972000\n",
+       "1  RandomForestClassifier  0.972000\n",
+       "2      AdaBoostClassifier  0.974667\n",
+       "3          LGBMClassifier  0.981333\n",
+       "4           XGBClassifier  0.980667"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eval_models.get_models_ba(X_dig_train_boruta_multiple,\n",
     "                              X_dig_test,\n",
@@ -404,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3201bf9b",
    "metadata": {},
    "outputs": [],
@@ -416,12 +776,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "149689b8",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression 0.9747\n",
+      "RandomForestClassifier 0.9753\n",
+      "AdaBoostClassifier 0.9747\n",
+      "LGBMClassifier 0.9787\n",
+      "XGBClassifier 0.9807\n",
+      "912  features in the dataset\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Classifier</th>\n",
+       "      <th>BA score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.974667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForestClassifier</td>\n",
+       "      <td>0.975333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AdaBoostClassifier</td>\n",
+       "      <td>0.974667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LGBMClassifier</td>\n",
+       "      <td>0.978667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>XGBClassifier</td>\n",
+       "      <td>0.980667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Classifier  BA score\n",
+       "0      LogisticRegression  0.974667\n",
+       "1  RandomForestClassifier  0.975333\n",
+       "2      AdaBoostClassifier  0.974667\n",
+       "3          LGBMClassifier  0.978667\n",
+       "4           XGBClassifier  0.980667"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eval_models.get_models_ba(X_dig_train_scaled_boruta_multiple_corr,\n",
     "                              X_dig_test_scaled,\n",
